feat: layout nice

--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <div id="layout">
-      <div id="gameWrap">
-        <canvas id="game"></canvas>
-      </div>
+    <div id="app">
+      <div id="layout">
+        <div id="gameWrap">
+          <canvas id="game"></canvas>
+        </div>
 
-      <div id="hud">
-        <h3>Jogadores conectados</h3>
-        <ul id="ids"></ul>
+        <div id="hud">
+          <h3>Jogadores conectados</h3>
+          <ul id="ids"></ul>
+        </div>
       </div>
     </div>
 
